# jacobian-two

./: .gitignore  JacobianTwo.lean  LICENSE  NOTICE  README.md  SPEC.md  lake-manifest.json  lakefile.toml  pyproject.toml
JacobianTwo/: AffineCoordinate.lean  AffineInOneVariable.lean  Basic.lean  ConstantLeadingQuadratic.lean  Counterexample.lean  CubicFiber.lean  FractionRingDerivative.lean  QuadraticClearedEval.lean  QuadraticDenominator.lean  QuadraticDenominatorDescent.lean  QuadraticDirectPackage.lean  QuadraticGCDDescent.lean  QuadraticInOneVariable.lean  QuadraticParityExtraction.lean  QuadraticParityJacobian.lean  QuadraticRecurrence.lean  QuadraticRecurrencePrimitive.lean  QuadraticReduction.lean  QuadraticSpecialization.lean  QuadraticTransportJacobian.lean  QuadraticUnitConclusion.lean  RatFuncDerivative.lean  VariableLeadingQuadratic.lean  VariableLeadingQuadraticConclusion.lean
docs/: a6-delta-five-family.md  a6-delta-seven-generic.md  a6-delta-seven-walls.md  a6-delta-ten-codim-three.md  a6-delta-ten-codim-two.md  a6-delta-ten-generic.md  a6-delta-ten-propagation.md  a6-delta-ten-split-contact-rank.md  a6-delta-ten-split-rank-strata.md  a6-delta-ten-split-t112-mixed-rank.md  a6-delta-ten-walls.md  a6-exceptional-source.md  a6-multiplication-tensor.md  a6-one-dicritical-local.md  a6-one-pair-infinity.md  a6-spin-lift.md  affine-coordinate.md  audit.md  constant-leading-quadratic.md  finite-flat-trace-lattices.md  galois-frontier.md  newton-72-108-sparse.md  nonproper-set.md  one-dicritical-leaf-labels.md  one-dicritical-source-smoothness.md  research-log.md  (+13 more)
(+137 files in other folders)
