[project]
name = "jacobian-two-verifier"
version = "0.1.0"
description = "Exact checkers for the Jacobian counterexample and certified plane fragments"
requires-python = ">=3.12"
dependencies = [
  "sympy>=1.14.0,<2",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0,<2",
  "pytest>=8.4.0,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["scripts", "tests"]

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true
